--- a/Parallel Test Execution/.github/workflows/Parallel Cypress Tests.yml
+++ b/Parallel Test Execution/.github/workflows/Parallel Cypress Tests.yml
@@ -7,20 +7,15 @@ jobs:
     name: Cypress run
     runs-on: ubuntu-20.04
     strategy:
-      # when one test fails, DO NOT cancel the other
-      # containers, because this will kill Cypress processes
-      # leaving the Dashboard hanging ...
-      # https://github.com/cypress-io/github-action/issues/48
+      # when one test fails, DO NOT cancel the other as it will leave Cypress Dashboard hanging      
       fail-fast: false
       matrix:
-        # run 3 copies of the current job in parallel
+        # run 2 copies of the current job in parallel
         containers: [1, 2]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      # because of "record" and "parallel" parameters
-      # these containers will load balance all found tests among themselves
+      
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
@@ -28,8 +23,7 @@ jobs:
           parallel: true
           group: 'Actions example'
         env:
-          # pass the Dashboard record key as an environment variable
+          # Fetch the Dashboard record key and pass it as an environment variable
           CYPRESS_RECORD_KEY: ${{ secrets.RECORD_KEY }}
-          # Recommended: pass the GitHub token lets this action correctly
-          # determine the unique run id necessary to re-run the checks
+          # Pass the GitHub token          
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
